fix time label spacing on add run page

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -76,3 +76,8 @@ footer {
     margin-left: 10px;
 }
 
+.time-label {
+    line-height: 0px;
+    margin-top: 8px;
+}
+
